Fixed formatting on Safari.

--- a/src/css/App.css
+++ b/src/css/App.css
@@ -84,7 +84,6 @@ h6 {
 }
 
 .nav-wrapper {
-  height: 25%;
   width: 60%;
   display: flex;
   flex-direction: column;
@@ -97,6 +96,11 @@ h6 {
   display: flex;
   justify-content: space-around;
   align-items: center;
+}
+
+.nav-container a,
+.nav-wrapper a {
+  margin-bottom: 36px;
 }
 
 .nav-wrapper a {
@@ -134,7 +138,6 @@ h6 {
   justify-content: space-around;
   align-items: center;
   width: 75%;
-  height: 10%;
 }
 
 .socials-icons {
@@ -501,13 +504,9 @@ h6 {
   .nav-wrapper a {
     width: 60%;
   }
-
+  
   .nav-container {
     flex-direction: column;
-  }
-
-  .nav-container a {
-    margin-bottom: 24px;
   }
 }
 
